Added missing EMI features